# PYNQ---Ex

LC3-CPU/vitis/lc3/: lc3.cpp
LC3-CPU/vitis/lc3_24/: design_1.tcl  lc3_24.xpr
LC3-CPU/vivadoRTL/lc3/: lc3.xpr
LC3-CPU/vivadoRTL/rtl_old/: LC3_ALU.v  Memory.v  RegisterFile.v
RISCV/state/: state.qpf  state.qsf  state.qws
RISCV/state/db/: state.(0).cnf.cdb  state.(0).cnf.hdb  state.(1).cnf.cdb  state.(1).cnf.hdb  state.(2).cnf.cdb  state.(2).cnf.hdb  state.(3).cnf.cdb  state.(3).cnf.hdb  state.(4).cnf.cdb  state.(4).cnf.hdb  state.(5).cnf.cdb  state.(5).cnf.hdb  state.(6).cnf.cdb  state.(6).cnf.hdb  state.(7).cnf.cdb  state.(7).cnf.hdb  state.(8).cnf.cdb  state.(8).cnf.hdb  state.(9).cnf.cdb  state.(9).cnf.hdb  state.asm.qmsg  state.asm.rdb  state.cmp.bpm  state.cmp.cdb  state.cmp.hdb  state.cmp.idb  state.cmp.kpt  state.cmp.logdb  state.cmp.rdb  state.cmp_merge.kpt  state.db_info  state.fit.qmsg  state.hier_info  state.hif  state.lpc.html  state.lpc.rdb  state.lpc.txt  state.map.bpm  state.map.cdb  state.map.hdb  (+24 more)
RISCV/state/output_files/: state.asm.rpt  state.done  state.fit.rpt  state.fit.summary  state.flow.rpt  state.jdi  state.map.rpt  state.map.summary  state.pin  state.sof  state.sta.rpt
add2bit_RTL_HDL/: example.xpr
add2bit_RTL_HDL/example.cache/wt/: synthesis.wdf
alu_PYNQ/vitis/alu_z2/: alu.cpp
alu_PYNQ/vitis/alu_z2/alu/solution1/impl/ip/drivers/ALU_v1_0/src/: CMakeLists.txt
basecnn/: combined_tb.v  line_buffer.v  muladdtree3x3.v
basecnn/basecnn/: basecnn.xpr
cpu/riscv/: riscv.xpr
per/GPIO_LED/: GPIO_LED.xpr  gpio_led.bit  gpio_led.tcl
(+1817 files in other folders)
